@@ -1,3 +1,7 @@
+Tue Aug 19 01:31:28 2003  Tim Janik  <timj@gtk.org>
+
+	* gsignal.c: added optimizations to skip NOP signal emissions.
+
 Wed Aug  6 09:57:14 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* testgobject.c (test_signal_accumulator): Add check
